<resources>
    <string name="app_name">KardioScreen</string>
    <string name="copyrights">Copyrights &#169; iMedrix, All Rights Reserved.</string>
    <string name="having_trouble">Having trouble logging in?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_report">Report Issue</string>
    <string name="menu_password">Change Password</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="menu_help">Help</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="terms_n_conditions">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper tellus, diam felis at consequat. Ultricies nunc est, sodales et bibendum tempus, lorem dictumst. Imperdiet ut blandit facilisis platea dolor pellentesque. Velit id quis orci et fermentum, enim auctor. Adipiscing posuere sed quam hac sed praesent malesuada blandit id. Leo, nec enim lacus interdum consequat. Et faucibus placerat donec amet amet sit dui. Ipsum interdum facilisis aliquam ornare commodo eu lectus curabitur neque. A nec et senectus sed feugiat.\n\n

Aliquet ac maecenas posuere enim. Iaculis convallis sit orci et tortor. Aliquam, nisl faucibus at at mauris sit elementum. In duis pellentesque habitant id purus tortor euismod sollicitudin

Feugiat in est tortor rutrum suscipit nisl, suspendisse. Nibh pulvinar arcu ac penatibus metus, natoque senectus. Vitae sit volutpat bibendum nibh arcu egestas. A quis fringilla tristique sed. Elementum mattis vitae orci dignissim eu. Sed imperdiet condimentum sed arcu accumsan sed posuere.\n\n

Commodo sed cursus luctus elit, sed suspendisse pharetra. Cras suspendisse elementum sed sit eleifend odio. Metus eu porttitor viverra aenean consequat quam. Eget et urna a donec sed nisi, facilisis. Lacus sit amet arcu et. Sit non pellentesque mauris, erat ut orci leo, ac.\n\n

Habitant nisl, sed a lectus vitae. Quis volutpat ullamcorper fames suscipit neque. Purus nulla ipsum sed id enim lectus quis tortor sapien. Nullam vestibulum varius cras vulputate ultrices nulla posuere turpis. Rhoncus tristique viverra eu, fusce enim commodo purus sed sit.

Suscipit et nisl nisi sit dapibus. A sit pharetra pulvinar fermentum, mollis duis. Imperdiet hendrerit nisl lectus etiam adipiscing consectetur faucibus lectus sit. Morbi purus mi augue diam morbi lacus pellentesque fermentum risus.</string>
</resources>
