<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shelby.kardio.ui.main_display.EcgMainDisplay"
        android:label="@string/menu_home"
        tools:layout="@layout/ecg_main_display_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.shelby.kardio.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.shelby.kardio.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.shelby.kardio.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/report_fragment" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.shelby.kardio.ui.change_password.ChangePasswordFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/change_password_fragment" />

    <fragment
        android:id="@+id/nav_terms"
        android:name="com.shelby.kardio.ui.terms.TermsFragment"
        android:label="@string/menu_terms"
        tools:layout="@layout/terms_fragment" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.shelby.kardio.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/help_fragment" />


</navigation>